# gameit

./: CMakeLists.txt  CMakePresets.json  README.md
src/: EventHandler.cpp  engine.hpp  event_registry.hpp  events.hpp  main.cpp  utilities.hpp  window.cpp  window.hpp
src/events/: EventHandler.hpp  EventRegistry.hpp  MouseDown.cpp  Quit.cpp  Quit.hpp
